samples/_failures_safe/1761005441_fb3dd5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64eda802.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_64eda802.c:130:5: error: expected declaration or statement at end of input
  130 |     int capitalized_count = 0;
      |     ^~~
